Fixed misaligned reply preview in thread composer.

--- a/res/css/views/rooms/_ReplyPreview.pcss
+++ b/res/css/views/rooms/_ReplyPreview.pcss
@@ -20,6 +20,7 @@ limitations under the License.
     background: $background;
     max-height: 50vh;
     overflow: auto;
+    margin: 0 0 0 -8px;
 
     .mx_ReplyPreview_section {
         border-bottom: 1px solid $primary-hairline-color;
@@ -39,7 +40,7 @@ limitations under the License.
 
             .mx_ReplyPreview_header_cancel {
                 background-color: $primary-content;
-                mask: url('$(res)/img/cancel.svg');
+                mask: url("$(res)/img/cancel.svg");
                 mask-repeat: no-repeat;
                 mask-position: center;
                 mask-size: 18px;
